Modified Files: 	bin/root/MONA.CFG src/kernel/Makefile 	src/kernel/secondboot.asm tools/fat_write/fat.cpp Removed Files: 	env/kernel.inc

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -1,3 +1,9 @@
+# 1600(x1200), 1280(x1024), 1024(x768), 800(x600), 640(x480), 320(x200)
+VESA_RESOLUTION=800
+
+# 16, 24, 32
+VESA_BPP=16
+
 SERVER=/SERVERS/KEYBDMNG.SVR
 SERVER=/SERVERS/MOUSE.SVR
 SERVER=/SERVERS/GUI.SVR
