remove KeyboardManager at shell

--- a/Mona/src/servers/shell/Makefile
+++ b/Mona/src/servers/shell/Makefile
@@ -1,5 +1,5 @@
 TARGET  = SHELL.SVR
-SOURCES = main.cpp KeyboardManager.cpp
+SOURCES = main.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/monapi.inc
