Modified Files: 	ChangeLog Makefile.in apps/Makefile apps/gui/Makefile 	apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/non-gui/Makefile apps/non-gui/clock/Makefile 	apps/non-gui/jpegdemo/Makefile apps/non-gui/nic/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/tube/Makefile 	apps/non-gui/waba/Makefile env/cygwin.env env/djgpp.env 	env/linux2.x.env env/linux3.x.env env/mingw.env env/monapi.inc 	include/sys/HList.h samples/Makefile samples/gui/Makefile 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile samples/non-gui/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/Makefile src/kernel/Makefile src/lib/Makefile 	src/lib/gui/Makefile src/lib/jpegls/Makefile 	src/lib/monapi/Makefile src/servers/Makefile 	src/servers/1linesh/Makefile src/servers/gui/Makefile 	src/servers/key/Makefile src/servers/mouse/Makefile 	src/servers/shell/Makefile tools/Makefile 	tools/fat_write/Makefile Added Files: 	env/monaelf.lds

--- a/Mona/apps/gui/fire/Makefile
+++ b/Mona/apps/gui/fire/Makefile
@@ -20,7 +20,7 @@ $(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBDIR)/libmonapi.a $(LIBDIR)/libmona
 
 install: all
 	mkdir -p $(BINDIR)/root/APPS
-	cp -u $(TARGET) $(BINDIR)/root/APPS
+	$(INSTALL) $(TARGET) $(BINDIR)/root/APPS
 
 clean:
 	rm -f $(OBJECTS) $(TARGET)
