--- a/Mona/env/linux3.x.env
+++ b/Mona/env/linux3.x.env
@@ -5,7 +5,9 @@ LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
+INSTALL  = install
 CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g -O3 -DMONA -DDEBUG_BUILD -DHOST_LINUX3
 NFLAGS   = -DBUILD_ON_LINUX -f elf
 EXEEXT   =
+MONAELF_LDS = -T $(MONADIR)/env/monaelf.lds
 USER_START_FUNCTION = user_start
