--- a/Mona/env/mingw.env
+++ b/Mona/env/mingw.env
@@ -5,6 +5,7 @@ LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
+INSTALL  = cp -u
 CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW
 EXEEXT   = .exe
 NFLAGS   = -f win32
