--- a/Mona/apps/gui/noiz2bg/Makefile
+++ b/Mona/apps/gui/noiz2bg/Makefile
@@ -19,7 +19,7 @@ $(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBDIR)/libmonapi.a $(LIBDIR)/libmona
 
 install: all
 	mkdir -p $(BINDIR)/root/APPS
-	cp -u $(TARGET) $(BINDIR)/root/APPS
+	$(INSTALL) $(TARGET) $(BINDIR)/root/APPS
 
 clean:
 	rm -f $(OBJECTS) $(TARGET)
