Modified Files: 	ChangeLog apps/gui/fire/fire.asm env/cygwin.env env/djgpp.env 	env/linux2.x.env env/linux3.x.env env/mingw.env Added Files: 	include/macro.asm Removed Files: 	src/kernel/macro.asm

--- a/Mona/env/djgpp.env
+++ b/Mona/env/djgpp.env
@@ -8,4 +8,6 @@ AR       = ${DJGPP_HOME_H}/bin/ar cvru
 RANLIB   = ${DJGPP_HOME_H}/bin/ranlib
 INSTALL  = cp -u
 CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O3 -DMONA -DDEBUG_BUILD -DHOST_DJGPP
+NFLAGS   = -I $(MONADIR)/include/
 EXEEXT   = .exe
+
