--- a/Mona/env/linux2.x.env
+++ b/Mona/env/linux2.x.env
@@ -7,7 +7,7 @@ AR       = ar cvru
 RANLIB   = ranlib
 INSTALL  = install
 CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -DMONA -DDEBUG_BUILD -DNO_NEW_DELETE -DGCC29 -O3 -DHOST_LINUX2
-NFLAGS   = -DBUILD_ON_LINUX -f elf
+NFLAGS   = -I $(MONADIR)/include/ -DBUILD_ON_LINUX -f elf
 EXEEXT   =
 MONAELF_LDS = -T $(MONADIR)/env/monaelf.lds
 USER_START_FUNCTION = user_start
