--- a/Mona/env/cygwin.env
+++ b/Mona/env/cygwin.env
@@ -7,6 +7,6 @@ AR       = ar cvru
 RANLIB   = ranlib
 INSTALL  = install
 CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_CYGWIN
+NFLAGS   = -I $(MONADIR)/include/ -f win32
 EXEEXT   = .exe
-NFLAGS   = -f win32
 USER_START_FUNCTION = _user_start
