Modified Files: 	ChangeLog apps/Makefile apps/gui/Makefile 	apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/non-gui/Makefile apps/non-gui/clock/Makefile 	apps/non-gui/jpegdemo/Makefile apps/non-gui/nic/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/tube/Makefile 	apps/non-gui/waba/Makefile bin/Makefile env/monapi.inc 	samples/Makefile samples/gui/Makefile 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile samples/non-gui/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/Makefile src/kernel/Makefile src/lib/Makefile 	src/lib/gui/Makefile src/lib/jpegls/Makefile 	src/lib/monalibc/Makefile src/lib/monapi/Makefile 	src/servers/Makefile src/servers/1linesh/Makefile 	src/servers/gui/Makefile src/servers/key/Makefile 	src/servers/mouse/Makefile src/servers/shell/Makefile 	tools/Makefile tools/bit2mnf/Makefile tools/fat_write/Makefile 	tools/monaelf/Makefile

--- a/Mona/apps/gui/2chAA/Makefile
+++ b/Mona/apps/gui/2chAA/Makefile
@@ -5,13 +5,13 @@ MONADIR = ../../..
 include $(MONADIR)/env/monapi.inc
 
 INCLUDE = -I$(INCDIR)
-LINK    = -lgui -lmonapi -lmonalibc
+LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
 
 CXXFLAGS += -DDEBUG
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBDIR)/libmonapi.a $(LIBDIR)/libmonalibc.a
+$(TARGET): $(OBJECTS) $(LIBMONAPI) $(LIBDIR)/libmonapi.a $(LIBDIR)/libmonalibc.a
 	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
 	objcopy $(OFLAGS) $@
 	$(STRIP) $@
