Modified Files: 	ChangeLog env/cygwin.env env/djgpp.env env/linux2.x.env 	env/linux3.x.env env/mingw.env src/kernel/Makefile 	src/kernel/kernel.cpp

--- a/Mona/env/linux3.x.env
+++ b/Mona/env/linux3.x.env
@@ -8,6 +8,7 @@ RANLIB   = ranlib
 INSTALL  = install
 CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g -O3 -DMONA -DDEBUG_BUILD -DHOST_LINUX3
 NFLAGS   = -I $(MONADIR)/include/ -DBUILD_ON_LINUX -f elf
+OSTYPE   = `uname -sr`
 EXEEXT   =
 MONAELF_LDS = -T $(MONADIR)/env/monaelf.lds
 USER_START_FUNCTION = user_start
