--- a/Mona/env/cygwin.env
+++ b/Mona/env/cygwin.env
@@ -8,5 +8,6 @@ RANLIB   = ranlib
 INSTALL  = install
 CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_CYGWIN
 NFLAGS   = -I $(MONADIR)/include/ -f win32
+OSTYPE   = `uname -sr`
 EXEEXT   = .exe
 USER_START_FUNCTION = _user_start
