--- a/Mona/env/djgpp.env
+++ b/Mona/env/djgpp.env
@@ -9,5 +9,6 @@ RANLIB   = ${DJGPP_HOME_H}/bin/ranlib
 INSTALL  = cp -u
 CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O3 -DMONA -DDEBUG_BUILD -DHOST_DJGPP
 NFLAGS   = -I $(MONADIR)/include/
+OSTYPE   = DJGPP
 EXEEXT   = .exe
 
