--- a/Mona/env/mingw.env
+++ b/Mona/env/mingw.env
@@ -8,5 +8,6 @@ RANLIB   = ranlib
 INSTALL  = cp -u
 CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW
 NFLAGS   = -I $(MONADIR)/include/ -f win32
+OSTYPE   = `uname -sr`
 EXEEXT   = .exe
 USER_START_FUNCTION = _user_start
