Modified Files: 	ChangeLog env/cygwin.env env/djgpp.env env/linux2.x.env 	env/linux3.x.env env/mingw.env env/monapi.inc src/lib/Makefile Added Files: 	src/lib/bzip2/.cvsignore src/lib/bzip2/CHANGES 	src/lib/bzip2/LICENSE src/lib/bzip2/Makefile 	src/lib/bzip2/README src/lib/bzip2/README.COMPILATION.PROBLEMS 	src/lib/bzip2/Y2K_INFO src/lib/bzip2/blocksort.c 	src/lib/bzip2/bzlib.c src/lib/bzip2/bzlib.h 	src/lib/bzip2/bzlib_private.h src/lib/bzip2/compress.c 	src/lib/bzip2/crctable.c src/lib/bzip2/decompress.c 	src/lib/bzip2/dependencies src/lib/bzip2/huffman.c 	src/lib/bzip2/manual.html src/lib/bzip2/manual_1.html 	src/lib/bzip2/manual_2.html src/lib/bzip2/manual_3.html 	src/lib/bzip2/manual_4.html src/lib/bzip2/manual_abt.html 	src/lib/bzip2/manual_ovr.html src/lib/bzip2/manual_toc.html 	src/lib/bzip2/randtable.c

--- a/Mona/env/cygwin.env
+++ b/Mona/env/cygwin.env
@@ -1,12 +1,14 @@
 NASM     = nasm
 NDISASM  = ndisasm
+CC       = gcc
 CXX      = g++
 LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
 INSTALL  = install
-CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_CYGWIN
+CFLAGS   = -nostdlib -Wall -fno-builtin -O3 -DMONA -DDEBUG_BUILD -DHOST_CYGWIN
+CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
 OSTYPE   = `uname -sr`
 EXEEXT   = .exe
