--- a/Mona/env/djgpp.env
+++ b/Mona/env/djgpp.env
@@ -1,5 +1,6 @@
 NASM     = nasmw
 NDISASM  = ndisasmw
+CXX      = ${DJGPP_HOME_H}/bin/gcc
 CXX      = ${DJGPP_HOME_H}/bin/gpp
 MAKE     = make
 LD       = ${DJGPP_HOME_H}/bin/ld
@@ -7,7 +8,8 @@ STRIP    = ${DJGPP_HOME_H}/bin/strip
 AR       = ${DJGPP_HOME_H}/bin/ar cvru
 RANLIB   = ${DJGPP_HOME_H}/bin/ranlib
 INSTALL  = cp -u
-CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O3 -DMONA -DDEBUG_BUILD -DHOST_DJGPP
+CFLAGS   = -nostdlib -fno-builtin -Wall -c -O3 -DMONA -DDEBUG_BUILD -DHOST_DJGPP
+CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/
 OSTYPE   = DJGPP
 EXEEXT   = .exe
