--- a/Mona/env/linux3.x.env
+++ b/Mona/env/linux3.x.env
@@ -1,12 +1,14 @@
 NASM     = nasm
 NDISASM  = ndisasm
+CC       = gcc
 CXX      = g++
 LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
 INSTALL  = install
-CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g -O3 -DMONA -DDEBUG_BUILD -DHOST_LINUX3
+CFLAGS   = -nostdlib -fno-builtin -Wall -c -g -O3 -DMONA -DDEBUG_BUILD -DHOST_LINUX3
+CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -DBUILD_ON_LINUX -f elf
 OSTYPE   = `uname -sr`
 EXEEXT   =
