--- a/Mona/env/mingw.env
+++ b/Mona/env/mingw.env
@@ -1,12 +1,14 @@
 NASM     = nasm
 NDISASM  = ndisasm
+CC       = gcc
 CXX      = g++
 LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
 INSTALL  = cp -u
-CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW
+CFLAGS   = -nostdlib -fno-builtin -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW
+CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 NFLAGS   = -I $(MONADIR)/include/ -f win32
 OSTYPE   = `uname -sr`
 EXEEXT   = .exe
