Modified Files: 	src/lib/bzip2/Makefile src/lib/bzip2/bzlib.c 	src/lib/bzip2/bzlib_private.h src/lib/bzip2/dependencies

--- a/Mona/src/lib/bzip2/Makefile
+++ b/Mona/src/lib/bzip2/Makefile
@@ -14,7 +14,7 @@ include $(MONADIR)/env/dirnames.inc
 BIGFILES = -D_FILE_OFFSET_BITS=64
 CFLAGS  += -Winline -ffreestanding -fomit-frame-pointer -fno-strength-reduce $(BIGFILES) -DBZ_NO_STDIO
 OBJECTS  = $(SOURCES:.c=.o)
-INCLUDE  = 
+INCLUDE  = -I$(INCDIR)
 
 all : $(TARGET)
 
