Modified Files: 	env/djgpp.env

--- a/Mona/env/djgpp.env
+++ b/Mona/env/djgpp.env
@@ -10,7 +10,7 @@ RANLIB   = ${DJGPP_HOME_H}/bin/ranlib
 INSTALL  = cp -u
 CFLAGS   = -nostdlib -fno-builtin -Wall -c -O3 -DMONA -DDEBUG_BUILD -DHOST_DJGPP
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
-NFLAGS   = -I $(MONADIR)/include/
+NFLAGS   = -i $(MONADIR)/include/
 OSTYPE   = DJGPP
 EXEEXT   = .exe
 
