Modified Files: 	src/lib/bzip2/huffman.c src/servers/gui/Makefile 	src/servers/gui/main.cpp

--- a/Mona/src/servers/gui/Makefile
+++ b/Mona/src/servers/gui/Makefile
@@ -1,5 +1,5 @@
 TARGET  = GUI.SVR
-SOURCES = main.cpp
+SOURCES = main.cpp MemoryInfo.cpp file.cpp image.cpp screen.cpp utils.cpp bzip2.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/monapi.inc
