Modified Files: 	.cvsignore apps/non-gui/bzcat/main.cpp bin/.cvsignore 	bin/Makefile bin/root/.cvsignore bin/root/APPS/.cvsignore 	bin/root/SERVERS/.cvsignore env/.cvsignore 	include/gui/messages.h lib/.cvsignore list/.cvsignore 	src/lib/gui/System/Drawing/Bitmap.cpp 	src/servers/1linesh/.cvsignore src/servers/gui/Makefile 	src/servers/gui/MemoryInfo.cpp src/servers/gui/MemoryInfo.h 	src/servers/gui/image.cpp src/servers/gui/main.cpp 	tools/bit2mnf/Makefile tools/fat_write/.cvsignore Added Files: 	src/servers/gui/bzip2.cpp src/servers/gui/bzip2.h

--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -22,6 +22,6 @@ write:
 clean:
 	rm -f $(TARGET)
 	rm -f root/KERNEL.IMG
-	rm -f root/MONA-12.MNF
+	rm -f root/MONA-12.M*
 	rm -rf root/APPS/*.*
 	rm -rf root/SERVERS/*.*
