Modified Files: 	ChangeLog include/monapi/syscall.h src/lib/monapi/Makefile 	src/lib/monapi/Message.cpp Added Files: 	include/monapi/cmessage.h src/lib/monapi/cmessage.c

--- a/Mona/src/lib/monapi/Makefile
+++ b/Mona/src/lib/monapi/Makefile
@@ -17,7 +17,7 @@ SOURCES = string.cpp \
           VirtualScreen.cpp \
           mt19937ar.cpp \
           Keys.cpp
-CSOURCES = clist.c
+CSOURCES = clist.c cmessage.c
 
 MONADIR  = ../../..
 include $(MONADIR)/env/dirnames.inc
