Modified Files: 	ChangeLog apps/non-gui/reversi/reversi.cpp bin/root/MONA.CFG 	include/monapi.h include/monapi/MemoryMap.h 	include/sys/types.h 	src/lib/gui/System/Mona/Forms/Application.cpp 	src/lib/monapi/Makefile src/lib/monapi/MemoryMap.cpp 	src/lib/monapi/cmessage.c src/servers/Makefile 	src/servers/gui/Makefile src/servers/gui/bzip2.cpp 	src/servers/gui/bzip2.h src/servers/gui/image.cpp 	src/servers/gui/image.h src/servers/gui/main.cpp 	src/servers/gui/screen.cpp src/servers/gui/screen.h 	src/servers/mouse/main.cpp Added Files: 	include/monapi/cmemoryinfo.h include/monapi/messages.h 	src/lib/monapi/cmemoryinfo.c src/lib/monapi/messages.c 	src/servers/file/.cvsignore src/servers/file/Makefile 	src/servers/file/main.cpp Removed Files: 	src/servers/gui/MemoryInfo.cpp src/servers/gui/MemoryInfo.h 	src/servers/gui/file.cpp src/servers/gui/file.h

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -4,6 +4,7 @@ VESA_RESOLUTION=800
 # 16, 24, 32
 VESA_BPP=16
 
+SERVER=/SERVERS/FILE.SVR
 SERVER=/SERVERS/KEYBDMNG.SVR
 SERVER=/SERVERS/MOUSE.SVR
 SERVER=/SERVERS/GUI.SVR
