Modified Files: 	include/gui/System/String.h src/lib/monapi/Makefile Added Files: 	include/monapi/CString.h src/lib/monapi/CString.cpp

--- a/Mona/src/lib/monapi/Makefile
+++ b/Mona/src/lib/monapi/Makefile
@@ -2,6 +2,7 @@ TARGET1 = $(LIBDIR)/monapi.o
 TARGET2 = $(LIBDIR)/libmonapi.a
 SOURCES = string.cpp \
           syscall.cpp \
+          CString.cpp \
           FileInputStream.cpp \
           FileOutputStream.cpp \
           Floppy.cpp \
