Modified Files: 	src/servers/shell/Makefile src/servers/shell/elf.cpp 	src/servers/shell/elf.h src/servers/shell/main.cpp

--- a/Mona/src/servers/shell/Makefile
+++ b/Mona/src/servers/shell/Makefile
@@ -6,6 +6,7 @@ include $(MONADIR)/env/monapi.inc
 
 INCLUDE = -I$(INCDIR) -I.
 LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc
+CXXFLAGS += -DDEBUG
 
 all: $(TARGET)
 
