Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/non-gui/bzcat/Makefile 	apps/non-gui/clock/Makefile apps/non-gui/jpegdemo/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/waba/Makefile 	env/monapi.inc samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/lib/gui/Makefile src/lib/jpegls/Makefile 	src/servers/1linesh/Makefile src/servers/file/Makefile 	src/servers/gui/Makefile src/servers/key/KeyboardManager.cpp 	src/servers/key/Makefile src/servers/key/main.cpp 	src/servers/mouse/Makefile src/servers/shell/Makefile Added Files: 	env/app-elf.inc

--- a/Mona/apps/gui/noiz2bg/Makefile
+++ b/Mona/apps/gui/noiz2bg/Makefile
@@ -2,33 +2,11 @@ TARGET  = GNOIZ2BG.ELF
 SOURCES = noiz2bg.cpp Form1.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi.inc
+include $(MONADIR)/env/app-elf.inc
 
-INCLUDE = -I$(INCDIR)
+INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
 
-CXXFLAGS += -DDEBUG
-
-all: $(TARGET)
-
-$(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBMONAPI) $(LIBDIR)/libmonalibc.a
-	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
-	objcopy $(OFLAGS) $@
-	$(STRIP) $@
-	$(BINDIR)/monaelf $@
-
-install: all
-	mkdir -p $(BINDIR)/root/APPS
-	$(INSTALL) $(TARGET) $(BINDIR)/root/APPS
-
-clean:
-	rm -f $(OBJECTS) $(TARGET)
-
-.SUFFIXES: .cpp .o
-.cpp.o:
-	$(CXX) -c $(CXXFLAGS) $(INCLUDE) $<
-
-depend:
-	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
+$(TARGET): $(LIBDIR)/libgui.a
 
 include dependencies
