--- a/Mona/apps/non-gui/reversi/Makefile
+++ b/Mona/apps/non-gui/reversi/Makefile
@@ -2,31 +2,8 @@ TARGET  = REVERSI.ELF
 SOURCES = reversi.cpp ReversiBoard.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi.inc
+include $(MONADIR)/env/app-elf.inc
 
-INCLUDE = -I$(INCDIR)
-LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc
-
-all: $(TARGET)
-
-$(TARGET): $(OBJECTS) $(LIBMONAPI) $(LIBDIR)/libmonalibc.a
-	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
-	objcopy $(OFLAGS) $@
-	$(STRIP) $@
-	$(BINDIR)/monaelf $@
-
-install: all
-	mkdir -p $(BINDIR)/root/APPS
-	$(INSTALL) $(TARGET) $(BINDIR)/root/APPS
-
-clean:
-	rm -f $(OBJECTS) $(TARGET)
-
-.SUFFIXES: .cpp .o
-.cpp.o:
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $<
-
-depend:
-	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
+INSTDIR = $(BINDIR)/root/APPS
 
 include dependencies
