--- a/Mona/apps/non-gui/jpegdemo/Makefile
+++ b/Mona/apps/non-gui/jpegdemo/Makefile
@@ -2,31 +2,11 @@ TARGET  = JPEGDEMO.ELF
 SOURCES = jpegdemo.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi.inc
+include $(MONADIR)/env/app-elf.inc
 
-INCLUDE = -I$(INCDIR) -I.
+INSTDIR = $(BINDIR)/root/APPS
 LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc -ljpegls
 
-all: $(TARGET)
-
-$(TARGET): $(OBJECTS) $(LIBMONAPI) $(LIBDIR)/libmonalibc.a $(LIBDIR)/libjpegls.a
-	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
-	objcopy $(OFLAGS) $@
-	$(STRIP) $@
-	$(BINDIR)/monaelf $@
-
-install: all
-	mkdir -p $(BINDIR)/root/APPS
-	$(INSTALL) $(TARGET) $(BINDIR)/root/APPS
-
-clean:
-	rm -f $(OBJECTS) $(TARGET)
-
-.SUFFIXES: .cpp .o
-.cpp.o:
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $<
-
-depend:
-	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
+$(TARGET): $(LIBDIR)/libjpegls.a
 
 include dependencies
