--- a/Mona/src/servers/1linesh/Makefile
+++ b/Mona/src/servers/1linesh/Makefile
@@ -7,31 +7,8 @@ SOURCES         = main.cpp          \
                   CommandHistory.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi.inc
+include $(MONADIR)/env/app-elf.inc
 
-INCLUDE = -I$(INCDIR) -I.
-LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc
-
-all: $(TARGET)
-
-$(TARGET): $(OBJECTS) $(LIBMONAPI) $(LIBDIR)/libmonalibc.a
-	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
-	objcopy $(OFLAGS) $@
-	$(STRIP) $@
-	$(BINDIR)/monaelf $@
-
-install: all
-	mkdir -p $(BINDIR)/root/SERVERS
-	$(INSTALL) $(TARGET) $(BINDIR)/root/SERVERS
-
-clean:
-	rm -f $(OBJECTS) $(TARGET)
-
-.SUFFIXES: .cpp .o
-.cpp.o:
-	$(CXX) -c $(CXXFLAGS) $(INCLUDE) $<
-
-depend:
-	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
+INSTDIR = $(BINDIR)/root/SERVERS
 
 include dependencies
