Modified Files: 	ChangeLog tools/Makefile tools/bit2mnf/Makefile Added Files: 	tools/elf_tool/.cvsignore tools/elf_tool/Makefile 	tools/elf_tool/elf.h tools/elf_tool/elfparser.cpp 	tools/elf_tool/elfparser.h tools/elf_tool/main.cpp 	tools/elf_tool/types.h

--- a/Mona/tools/Makefile
+++ b/Mona/tools/Makefile
@@ -2,20 +2,28 @@ all:
 	@cd fat_write; $(MAKE) $@
 	@cd bit2mnf; $(MAKE) $@
 	@cd monaelf; $(MAKE) $@
+	@cd elf_tool; $(MAKE) $@
 
 install:
+	@cd fat_write; $(MAKE)
 	@cd bit2mnf; $(MAKE) $@
+	@cd monaelf; $(MAKE)
+	@cd elf_tool; $(MAKE)
 
 clean: touchdepend
 	@cd fat_write; $(MAKE) $@
 	@cd bit2mnf; $(MAKE) $@
 	@cd monaelf; $(MAKE) $@
+	@cd elf_tool; $(MAKE) $@
 
 depend: touchdepend
 	@cd fat_write; $(MAKE) $@
+	@cd elf_tool; $(MAKE) $@
 
 distclean:
 	rm -f fat_write/dependencies
+	rm -f elf_tool/dependencies
 
 touchdepend:
 	touch fat_write/dependencies
+	touch elf_tool/dependencies
