Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/non-gui/bzcat/Makefile 	apps/non-gui/bzcat/main.cpp include/gui/messages.h 	include/monapi/messages.h samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	src/lib/monapi/messages.c src/servers/file/Makefile 	src/servers/file/main.cpp src/servers/gui/Makefile 	src/servers/gui/image.cpp src/servers/gui/main.cpp Added Files: 	src/servers/file/FileServer.h src/servers/file/bzip2.cpp 	src/servers/file/bzip2.h src/servers/file/file.cpp 	src/servers/file/file.h Removed Files: 	src/servers/gui/bzip2.cpp src/servers/gui/bzip2.h

--- a/Mona/apps/gui/fire/Makefile
+++ b/Mona/apps/gui/fire/Makefile
@@ -7,6 +7,7 @@ include $(MONADIR)/env/app-elf.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
+CXXFLAGS += -DDEBUG
 
 $(TARGET): $(LIBDIR)/libgui.a
 
