--- a/Mona/src/servers/file/Makefile
+++ b/Mona/src/servers/file/Makefile
@@ -1,9 +1,12 @@
 TARGET  = FILE.SVR
-SOURCES = main.cpp
+SOURCES = main.cpp file.cpp bzip2.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/app-elf.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
+LINK    = $(LIBDIR)/monapi.o -lbz2 -lmonapi -lmonalibc
+
+$(TARGET): $(LIBDIR)/libbz2.a
 
 include dependencies
