Modified Files: 	apps/non-gui/waba/Makefile env/app-elf.inc

--- a/Mona/apps/non-gui/waba/Makefile
+++ b/Mona/apps/non-gui/waba/Makefile
@@ -1,9 +1,10 @@
-TARGET  = WABA.ELF
-SOURCES = wabamona.cpp
+TARGET    = WABA.ELF
+SOURCES   = wabamona.cpp
+
+INSTDIR   = $(BINDIR)/root/APPS
+INSTFILES = WABA.LIB HELLO.WRP
 
 MONADIR = ../../..
 include $(MONADIR)/env/app-elf.inc
-
-INSTDIR = $(BINDIR)/root/APPS
 
 include dependencies
