--- a/Mona/src/servers/elf/Makefile
+++ b/Mona/src/servers/elf/Makefile
@@ -1,9 +1,10 @@
-TARGET  = SHELL.SVR
-SOURCES = main.cpp
+TARGET  = ELF.SVR
+SOURCES = main.cpp elfparser.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/app-elf.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
+LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc
 
 include dependencies
