--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -5,6 +5,7 @@ VESA_RESOLUTION=800
 VESA_BPP=16
 
 SERVER=/SERVERS/FILE.SVR
+SERVER=/SERVERS/ELF.SVR
 SERVER=/SERVERS/KEYBDMNG.SVR
 SERVER=/SERVERS/MOUSE.SVR
 SERVER=/SERVERS/GUI.SVR
