Modified Files: 	ChangeLog bin/Makefile bin/root/APPS/.cvsignore 	samples/gui/bitmap/.cvsignore samples/gui/bitmap/Makefile 	samples/gui/button/.cvsignore samples/gui/button/Makefile 	samples/gui/label/.cvsignore samples/gui/label/Makefile 	samples/non-gui/hello/.cvsignore 	samples/non-gui/hello/Makefile 	samples/non-gui/kanji/.cvsignore 	samples/non-gui/kanji/Makefile src/servers/shell/main.cpp Added Files: 	env/monapi-el2.inc

--- a/Mona/samples/gui/bitmap/Makefile
+++ b/Mona/samples/gui/bitmap/Makefile
@@ -1,8 +1,8 @@
-TARGET  = BITMAP.ELF
+TARGET  = BITMAP
 SOURCES = Form1.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-el2.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
