--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -2,7 +2,7 @@ TARGET = mona.img
 
 ROOT_FILES = `cd root; ls *.*`
 SVR_FILES  = `cd root; ls SERVERS/*.SVR`
-APP_FILES  = `cd root; ls APPS/*.ELF APPS/*.LIB APPS/*.WRP`
+APP_FILES  = `cd root; ls APPS/*.EL* APPS/*.LIB APPS/*.WRP`
 
 all:
 	cp fat_template.img $(TARGET)
