--- a/Mona/apps/non-gui/jpegdemo/Makefile
+++ b/Mona/apps/non-gui/jpegdemo/Makefile
@@ -1,8 +1,8 @@
-TARGET  = JPEGDEMO.ELF
+TARGET  = JPEGDEMO
 SOURCES = jpegdemo.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-el2.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 LINK    = $(LIBDIR)/monapi.o -lmonapi -lmonalibc -ljpegls
