--- a/Mona/apps/non-gui/reversi/Makefile
+++ b/Mona/apps/non-gui/reversi/Makefile
@@ -1,8 +1,8 @@
-TARGET  = REVERSI.ELF
+TARGET  = REVERSI
 SOURCES = reversi.cpp ReversiBoard.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-el2.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 
