--- a/Mona/apps/gui/ps/Makefile
+++ b/Mona/apps/gui/ps/Makefile
@@ -1,8 +1,8 @@
-TARGET  = PS.ELF
+TARGET  = PS
 SOURCES = Form1.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-el2.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 LINK    = -lgui $(LIBDIR)/monapi.o -lmonapi -lmonalibc
