--- a/Mona/apps/non-gui/noiz2bg/Makefile
+++ b/Mona/apps/non-gui/noiz2bg/Makefile
@@ -1,8 +1,8 @@
-TARGET  = NOIZ2BG.ELF
+TARGET  = NOIZ2BG
 SOURCES = noiz2bg.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-el2.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 
