--- a/Mona/apps/non-gui/nic/ne2k/Makefile
+++ b/Mona/apps/non-gui/nic/ne2k/Makefile
@@ -1,8 +1,8 @@
-TARGET  = GETMAC.ELF
+TARGET  = GETMAC
 SOURCES = getmac.cpp
 
 MONADIR = ../../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-el2.inc
 
 INSTDIR = $(BINDIR)/root/APPS
 
