--- a/Mona/apps/non-gui/waba/Makefile
+++ b/Mona/apps/non-gui/waba/Makefile
@@ -1,10 +1,10 @@
-TARGET    = WABA.ELF
+TARGET    = WABA
 SOURCES   = wabamona.cpp
 
 INSTDIR   = $(BINDIR)/root/APPS
 INSTFILES = WABA.LIB HELLO.WRP
 
 MONADIR = ../../..
-include $(MONADIR)/env/app-elf.inc
+include $(MONADIR)/env/monapi-el2.inc
 
 include dependencies
